
	Proper recovery from loading of color scheme unsupported by the terminal
	at startup.  Thanks to Svyatoslav Mishyn (a.k.a. juef).

	Automatically create ~/.vifm/scripts containing small README file if the
	directory doesn't exist on startup.  Thanks to fogine.

	Consider control message when deciding width for a dialog, also don't let
	it disappear on narrow terminals.

	Fixed resetting "vborder" of 'fillchars' after it has been set to
	something (as in `:set fillchars=vborder:\* fillchars&`).

	Fixed crash after color scheme load failure possible in scenarios where
	file name specific highlights are used.

	Fixed use of uninitialized value which could affect whether pattern is
	matches whole path or only its name part.

0.8-beta to 0.8

	Added handling of Ctrl-L to sort dialog.  Thanks to filterfalse.

	Added device id (major and minor numbers) to file info dialog.

	Added script to update timestamps, so that build system won't be
	regenerated without real reason.  One might want to run it when building
	from git checkout, which doesn't preserve correct timestamps.

	Append unused space in view columns to the last one with percent sizing
	type if any.  Thanks to fogine.

	Drastically increased performance of custom view composing.

	Be more accurate when deciding whether view displays graphics,
	particularly rely on %px and %py, because %pw and %ph might be useful for
	text viewers as well.  Thanks to Svyatoslav Mishyn (a.k.a. juef).

	Less flicker on preview window update.

	Clean occasional graphics leftovers after disabling preview.

	Ignore file decorations ('classify') on sorting custom views.  Thanks to
	filterfalse.

	Do not invoke vifmrc-converter to update color scheme names if no color
	schemes were found.

	Display 2822 date without time zone in file info.  Thanks to Svyatoslav
	Mishyn (a.k.a. juef).

	Disallow creating user-defined command with "?" or "!" suffix if this
	would hide builtin command.  Redefining commands without suffixes is not