@@ -43,6 +43,9 @@
 	Consider control message when deciding width for a dialog, also don't let
 	it disappear on narrow terminals.
 
+	Provide conflict resolution options in a dialog rather than on the
+	command-line, which is hard to read with so many options.
+
 	Fixed resetting "vborder" of 'fillchars' after it has been set to
 	something (as in `:set fillchars=vborder:\* fillchars&`).
 
